--- a/notes/08_clustering/tutorial.tex
+++ b/notes/08_clustering/tutorial.tex
@@ -79,11 +79,21 @@
 
 \clearpage
 
+
+\mode<all>
+\input{./4_pairwise}
+\mode*
+
 \mode<all>
 \input{./5_pairwise_data}
 \mode*
 
 %\clearpage
+
+\mode<all>
+\input{./7_soft_kmeans_eucl}
+\mode*
+
 
 \mode<all>
 \input{./6_pairwsie_meanfield}
