--- a/notes/08_clustering/3_kmeans_online.tex
+++ b/notes/08_clustering/3_kmeans_online.tex
@@ -64,7 +64,7 @@ Online K-means...
     \end{itemize}
     }
 \slidesonly{
-\item ``Noisiness''of online K-means allows it to escape local minima.
+\item ``Noisiness'' of online K-means allows it to escape local minima.
 
 }
  \notesonly{
@@ -75,16 +75,16 @@ Online K-means...
 \end{itemize}
 }
 \notesonly{
-\item The quality of the solution found by online K-means depends on choosing an appropriate schedule for $\varepsilon$: Robbins-Monro conditions
+\item The quality of the solution found by online K-means depends on choosing an appropriate schedule for $\varepsilon$: Robbins-Munro conditions
 }
 \slidesonly{
-\item Choose learning rate schedule for $\varepsilon$: Robbins-Monro conditions
+\item Choose learning rate schedule for $\varepsilon$: Robbins-Munro conditions
 }
 \notesonly{(c.f. Fig \ref{fig:annealingScheduleKMeans2})}
 \begin{figure}[h!]
   \centering
 \includegraphics[height=3cm]{img/section4_fig4} 
-  \notesonly{\caption{Decaying learning rate schedule to satisfy Robbins-Monro conditions.}}
+  \notesonly{\caption{Decaying learning rate schedule to satisfy Robbins-Munro conditions.}}
   \label{fig:annealingScheduleKMeans2}
 \end{figure}
 \end{enumerate}
@@ -99,7 +99,7 @@ A compromise\slidesonly{:}\notesonly{ between batch and online K-means is }\emph
 
 \begin{center}
 \includegraphics[width=0.7\textwidth]{img/K-means_convergence_to_a_local_minimum_2rows}
-\notesonly{\captionof{figure}Example of K-means finding a solution that is a local minumum. Each plot is a snapshot of the prototypes at some iteration of the algorithm.}
+\notesonly{\captionof{figure}Example of K-means finding a solution that is a local minimum. Each plot is a snapshot of the prototypes at some iteration of the algorithm.}
 \end{center}
 
 \end{frame}
