--- a/notes/08_clustering/4_pairwise.tex
+++ b/notes/08_clustering/4_pairwise.tex
@@ -46,7 +46,7 @@
 	\includegraphics[width=0.99\textwidth]{img/m3_pdist_shuffled} 
 \end{minipage}
 	\notesonly{
-	\captionof{figure}{Pairwise distances. The points were sorted by cluster to highlight the box-strcture in the pairwise distances. This is purely for visualization purposes. Pairwise clustering does not require any prior sorting of the data.}
+	\captionof{figure}{Pairwise distances. The points were sorted by cluster to highlight the box-structure in the pairwise distances. This is purely for visualization purposes. Pairwise clustering does not require any prior sorting of the data.}
 	}
 \end{center}
 
@@ -64,9 +64,9 @@ When we reason about structure in the data:\\
 Points that are ``close'' to one another have more in common than points that are far away from one another. 
 \notesonly{
 We cluster points based on their \emph{proximity to one another}. 
-A point that is further away from this collection is grouped with other points that are closer to it. Pairwise clustering is about grouping points based on their pairwise relations. \
+A point that is further away from this collection is grouped with other points that are closer to it. Pairwise clustering is about grouping points based on their pairwise relations. \\
 }
-We will first discuss clustering based on \emph{pairwise distances} and then extend this to \emph{soft clustering}.
+We will first discuss clustering based on \emph{pairwise distances} and eventually extend this to \emph{soft clustering}.
 
 \end{frame}
 
