--- a/notes/08_clustering/6_pairwsie_meanfield.tex
+++ b/notes/08_clustering/6_pairwsie_meanfield.tex
@@ -195,7 +195,7 @@ such that
 \end{equation}
 
 \notesonly{
-The normalization in \eqref{eq:assignvarsoftnormalize} ensures that point $\alpha$ is completly assigned and allows us to interpret the assignment variables as \emph{assignment probabilities. See Fig\ref{fig:clusteringsoft}} for an example. 
+The normalization in \eqref{eq:assignvarsoftnormalize} ensures that point $\alpha$ is completely assigned and allows us to interpret the assignment variables as \emph{assignment probabilities. See Fig\ref{fig:clusteringsoft}} for an example. 
 The purpose of defining the assignment probabilities as ``expectations'' $\big< \cdot \big>$ will be clarified, when we discuss the soft clustering algorithm.
 }
 \begin{figure}[h!]
