--- a/notes/08_clustering/4_pairwise.tex
+++ b/notes/08_clustering/4_pairwise.tex
@@ -5,14 +5,16 @@
     \begin{center} \huge
         \secname
     \end{center}
-    \begin{center}
-		Proximity to $\underset{\text{other points}}{\cancel{\text{prototype}}}$
-    \end{center}
+    \begin{itemize}
+		\item Proximity to $\underset{\text{other points}}{\cancel{\text{prototype}}}$
+		\item A proper application of mean-field annealing
+		\item A building block for ``soft'' K-means
+    \end{itemize}
 \end{frame}
 }
 
 
-\begin{frame}{Notions of distance}
+\begin{frame}{Notions of proximity}
 
 \textbf{Recall} that K-means clusters points based on their proximity to some prototype.\\
 
@@ -33,7 +35,7 @@
 
 \end{frame}
 
-\begin{frame}{Notions of distance: pairwise distance}
+\begin{frame}{Notions of proximity: pairwise distance}
 
 \begin{center}
 \begin{minipage}{0.32\textwidth}
