--- a/notes/08_clustering/6_pairwsie_meanfield.tex
+++ b/notes/08_clustering/6_pairwsie_meanfield.tex
@@ -1,42 +1,45 @@
+\subsection{The mean-field approximation for pairwise clustering}
 
 \begin{frame}[t] 
-\slidesonly{\frametitle{The mean-field approximation for pairwise clustering}}
+\slidesonly{\frametitle{\subsecname}}
 
 \svspace{-3mm}
 
 \begin{block}{assignment noise $\rightarrow$ Gibbs distribution}
-$$
+\begin{equation}
 	P_{ \big( \big\{ m_q^{(\alpha)} \big\} \big) }
 	= \frac{1}{Z_p} \exp \Big\{ -\beta 
 	\overbrace{
 		E_{\big[ \big\{ m_q^{(\alpha)} \big\} \big]}
 		}^{= \, E_p}
 		\Big\}
-$$
+\end{equation}
 where
-$$
+\begin{equation}
 	Z_p = \sum\limits_{\mathscr{M}} \exp \Big\{ -\beta
 		E_p
 		\Big\}
-$$
+\end{equation}
 \end{block}
 \notesonly{
 This is approximated by the mean-fields:
 }
 \begin{block}{factorizing distribution}
-$$
+\begin{equation}
 	Q_{ \big[ \big\{ m_q^{(\alpha)} \big\} \big] }
 	= \frac{1}{Z_Q} \exp \Big\{ -\beta \sum\limits_{q, \gamma}
 		m_q^{(\gamma)} \underbrace{ e_q^{(\gamma)} }_{
 			\text{{\tiny mean-fields}} } \Big\}
-$$
+\end{equation}
 where:
-$$
+\begin{equation}
 	Z_Q = \sum\limits_{\mathscr{M}} \exp \Big\{ -\beta \sum\limits_{q, 
 		\gamma} m_q^{(\gamma)} e_q^{(\gamma)} \Big\}
-$$
+\end{equation}
 \end{block}
 \end{frame}
+
+\subsubsection{Calculation of the moments}
 
 \begin{frame}\frametitle{Recap calculation of the moments (general mean-field case)}
 The factorization of the distribution $Q$ simplifies the calculation of the moments. 
@@ -49,6 +52,9 @@ This is based on the individual state variables being \emph{uncorrelated}.
 \end{equation}
 
 \end{frame}
+
+\mode<article>{
+
 \begin{frame}
 \slidesonly{
 \frametitle{Factorizing moments (general mean-field case)}
@@ -82,21 +88,47 @@ This is based on the individual state variables being \emph{uncorrelated}.
 \end{frame}
 
 \begin{frame}
-\slidesonly{\frametitle{Calculation of moments}}
-$$
+\notesonly{Some nomenclature, before we demonstrate the same factorization for the assignment variables in pairwise clustering.}
+\slidesonly{ Nomenclature }($\otimes$ $\rightarrow$ \emph{set-product, Cartesian product})\\
+ 
+ \begin{tabular}{r l p{9cm}}
+$\big\{ \vec{m}^{(\alpha)} \big\}$: & & set of all $M$-dimensional binary vectors $\big( m_1^{(\alpha)}, m_2^{(\alpha)}, \ldots, 
+  m_M^{(\alpha)} \big)^\top$ which fulfill the normalization condition (exactly one element equals 1). \\\\
+$\mathscr{M}$: & & $\big\{ \vec{m}^{(1)} \big\} \otimes \big\{ \vec{m}^{(2)} \big\} \otimes \ldots \otimes \big\{ \vec{m}^{(p)} \big\}$\\
+& & set-product (Cartesian product) between all possible binary assignment variables i.e.\ all possible valid assignments for the full dataset\\\\
+$\mathscr{M}_{\gamma}$:& &  $\big\{ \vec{m}^{(1)} \big\} \otimes \ldots \otimes \big\{ \vec{m}^{(\gamma - 1)} \big\} \otimes
+  \big\{ \vec{m}^{(\gamma + 1)} \big\} \otimes \ldots \otimes
+  \big\{ \vec{m}^{(p)} \big\}$\\
+& &\  set of all possible assignments for all data points  \\& & \hspace{0.03cm} except $\gamma$
+\end{tabular}
+
+\end{frame}
+
+}
+
+\begin{frame}
+\slidesonly{\frametitle{Calculation of moments for the assignment variables}}
+\begin{equation}
 		\begin{array}{lll}
 	\big< m_q^{(\gamma)} \big>_Q
 	& = \frac{1}{Z_Q} \sum\limits_{\mathscr{M}} m_q^{(\gamma)}
 		\exp \Big\{ -\beta \sum\limits_{r, \delta} 
 		m_{r}^{(\delta)} e_{r}^{(\delta)} \Big\}
 	\end{array}
-$$
+\end{equation}
 
+\slidesonly{
 \begin{itemize}
 \itr The factorization of $Q$ simplifies the calculation of the moments.
 \end{itemize}
 
+Here,\\
+$\mathscr{M}$ is the set-product (Cartesian product) between \textbf{all possible} binary assignment variables i.e.\ all possible valid assignments for the full dataset.
+}
+
 \end{frame}
+
+\mode<article>{
 
 \begin{frame}
 \slidesonly{\frametitle{Calculation of moments (derivation)}
@@ -153,6 +185,8 @@ this gives
 \end{equation}
 \end{frame}
 
+}
+
 \begin{frame}
 \frametitle{Solution for calculating the moments}
 $$
@@ -174,7 +208,7 @@ $$
 \end{block}
 \end{frame}
 
-\subsection{Soft clustering}
+\subsubsection{Soft clustering}
 
 \begin{frame}{\subsecname}
 
@@ -206,6 +240,8 @@ The purpose of defining the assignment probabilities as ``expectations'' $\big< 
 \end{figure}
 \end{frame}
 
+\subsubsection{Determining the mean-field parameters}
+
 \notesonly{
 
 Going back to mean-field approximation:
@@ -215,26 +251,71 @@ The approximation is achieved by minimizing the KL-divergence between the distri
 
 \begin{frame}[t] \slidesonly{\frametitle{Minimization of the KL-divergence}}
 \begin{block}{Mean Field equation (c.f. section on Stochastic Optimization for how to arrive at this result)}
-$$
+\begin{equation}
 	\fbox{$ \frac{\partial}{\partial e_l}\big<E_p\big>_Q 
 		- \sum\limits_k e_k \frac{\partial}{\partial e_l} \big<s_k\big>_Q = 0
 	$}
-$$
+\end{equation}
 \end{block}
-$$	\frac{\partial \big< E_p \big>_Q}{\partial e_q^{(\alpha)}}
+\begin{equation}	\frac{\partial \big< E_p \big>_Q}{\partial e_q^{(\alpha)}}
 	- \sum\limits_{r, \gamma} \frac{
 		\overbrace{ \partial \big< m_r^{(\gamma)} \big>_Q }^{
 			\substack{	\text{depends only on} \\
 					\text{data point } \gamma }}}{
 			\partial e_q^{(\alpha)}}
 		e_r^{(\gamma)} \eqexcl 0
-$$
-$$
+\end{equation}
+\begin{equation}
 	\frac{\partial \big< E_p \big>_Q}{\partial e_q^{(\alpha)}}
 	- \sum\limits_r \frac{\partial \big< m_r^{(\alpha)} \big>_Q}{
 		\partial e_q^{(\alpha)}}
 		e_r^{(\alpha)} \eqexcl 0
-$$
+\end{equation}
 
-switch to lecture slides....
 \end{frame}
+
+%--------------------------------------------------------------------------
+
+%--------------------------------------------------------------------------
+\begin{frame}[shrink=17] \frametitle{Mean-field annealing for pairwise clustering}
+\begin{figure}[!th]
+\footnotesize
+\removelatexerror
+\begin{algorithm}[H]
+  \DontPrintSemicolon
+  \textbf{Initialization:}\;
+  - (max.) number $M$ of partitions, initial  ($\beta_0$) and final  ($\beta_f$) values of the noise parameter, annealing factor  $\eta$,   convergence criterion  $\theta$\;
+  - initialize mean-fields  $e_q^{(\alpha)}$ with random numbers $\in [0, 1]$\;
+
+- $\beta \leftarrow \beta_0$\;
+\While(annealing){$\beta < \beta_f$}{
+\Repeat ( EM $\text{(fixed point iteration)}$){
+$\big| \big( e_q^{(\alpha)} \big)_{\mathrm{new}}
+	- \big( e_q^{(\alpha)} \big)_{\mathrm{old}} \big| < \theta 
+	\hspace{0.3cm}\forall q, \alpha$}{
+\hspace{-0.2cm}compute assignment probabilities: 
+$ \big< m_q^{(\alpha)} \big>_Q = \frac{ \exp \big\{ -\beta \big(e_q^{(\alpha)}
+	\big)_{\mathrm{old}}\big\} }{ \sum\limits_r \exp \big\{ -\beta \big(
+	e_r^{(\alpha)} \big)_{\mathrm{old}} \big\} } \hspace{0.3cm}  \forall
+	q, \alpha
+$\;
+\hspace{-0.2cm}compute new mean-fields: 
+\hspace{-0.6cm}
+$$\hspace{-0.2cm}\big( e_q^{(\alpha)} \big)_{\mathrm{new}} = \frac{2}{p} \frac{1}{
+	\sum\limits_{\gamma} \big< m_q^{(\gamma)} \big>_Q } \sum\limits_{\delta}
+	\big<m_q^{(\delta)} \big>_Q \cdot \bigg\{ d_{\delta \alpha} - \frac{1}{2} \frac{1}{
+		\sum\limits_{\gamma} \big< m_q^{(\gamma)} \big>_Q }
+		\sum\limits_{\varepsilon} \big< m_q^{(\varepsilon)}
+		\big>_Q d_{\varepsilon \delta} \bigg\} \hspace{0.1cm}\forall q, \alpha$$
+
+}
+$\beta \leftarrow \eta \cdot \beta$\;
+}
+\label{alg:meanFieldClustering}
+\caption{Mean-field annealing for pairwise clustering}
+\end{algorithm}
+\end{figure}
+\end{frame}
+
+%--------------------------------------------------------------------------
+
