--- a/notes/08_clustering/5_pairwise_data.tex
+++ b/notes/08_clustering/5_pairwise_data.tex
@@ -287,7 +287,7 @@ Pairwise Clustering                                                             
 		\big( \vec{x}^{(\alpha)} \big)^2 - \big( \vec{x}^{(\alpha)}
 		\big)^\top \vec{w}_q \Big\} \\\\
 	& = \frac{1}{p} \sum\limits_{q, \alpha} m_q^{(\alpha)} \Big\{
-		\big( \vec{x}^{(\alpha)} \Big)^2 - \big( \vec{x}^{(\alpha)}
+		\big( \vec{x}^{(\alpha)} \big)^2 - \big( \vec{x}^{(\alpha)}
 		\big)^\top \vec{w}_q - \vec{w}_q^2
 		+ \vec{w}_q^2 \Big\} \\
 		
