--- a/notes/08_clustering/tutorial.tex
+++ b/notes/08_clustering/tutorial.tex
@@ -6,7 +6,7 @@
 }
 %\setcounter{section}{\sheetnum-3}
 \newcommand{\tutorialtitle}{%
-    K-means Clustering and Pairwise Clustering
+    From hard to soft K-means via Pairwise Clustering
 }
 \newcommand{\tutorialtitleshort}{%
 	Clustering
