--- a/notes/09_som/1_som.tex
+++ b/notes/09_som/1_som.tex
@@ -6,8 +6,13 @@
         \secname
     \end{center}
     \begin{center}
-		Neighborhood-awar clustering to explain the data
+		Neighborhood-preserving clustering to explain the data
     \end{center}
 \end{frame}
 }
 
+\begin{frame}
+
+K-means
+
+\end{frame}
