--- a/notes/09_som/tutorial.tex
+++ b/notes/09_som/tutorial.tex
@@ -68,7 +68,13 @@
 \newpage
 
 \mode<all>
-\input{./0_som}
+\input{./0_noneighborhood}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./1_som}
 \mode*
 
 \clearpage
